data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_826.wast
;; 7. **Test for Invalid Operand Handling:**    - **Description**: Branching to labels with operand types that should trigger incorrect stack unwinding or restoration of operands.    - **Constraint Checked**: Correct operand stack unwinding and restoration.    - **Relation to CFG**: Validates operand stack handling mechanism in CFG.

(assert_invalid
  (module
    (func $invalid-operand-handling 
      (block 
        (block
          (br 1 (i32.const 1) (i32.const 2))
        )
      )
    )
  )
  "type mismatch"
)